# Wakea

./: README.md  __init__.py  pyproject.toml
configs/: model.yaml  rag.yaml  tools.yaml  train_dpo.yaml  train_rl.yaml  train_sft.yaml
data/: README_DATA.md  datasets.py
data/schemas/: tool_use.jsonl
envs/: agentbench_wrapper.py
evaluation/: judge.py
examples/: docs.txt
modeling/: lm_head.py  rope.py  transformer.py
modeling/adapters/: vision_mlp.py
rag/: api.py  embed.py  index_faiss.py  ingest.py  rerank.py  retriever.py
scripts/: build_index.py  build_webqa.py  train_dpo.py  train_rl.py  train_sft.py
serving/: router.py  server.py
tools/: rag_query.py  web_api.py  web_search.py
training/: rfs_bridge.py
utils/: config.py  seed.py
wakea/: MM-SRM-FullSpec.md  README.md  pyproject.toml
wakea/configs/: multimodal.yaml  rag.yaml  tools.yaml  train_dpo.yaml  train_sft.yaml
wakea/data/: README_DATA.md  datasets.py
wakea/data/schemas/: pref_pairs.jsonl  rl_trajectories.jsonl  sft_dialogue.jsonl
wakea/envs/: scienceqa_mm_wrapper.py  webshop_wrapper.py
wakea/evaluation/: metrics.py
wakea/modeling/: tokenizer.py  tool_head.py  wakea_lm.py
wakea/modeling/adapters/: audio_proj.py  qformer_lite.py
wakea/rag/: api.py  embed.py  index_faiss.py  retriever.py
wakea/scripts/: build_index.py  train_dpo.py  train_rl.py  train_sft.py
wakea/serving/: router.py  server.py
wakea/tools/: calculator.py  code_exec.py  rag_query.py  web_search.py
wakea/training/: rfs_bridge.py
wakea/utils/: checkpoint.py  logging.py
