[project]
name = "wakea"
version = "0.1.0"
description = "Wakea: Multimodal Small Reasoning Model (MM-SRM) scaffold"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Wakea Team" }]
dependencies = [
  # Core
  "numpy>=1.24",
  # Optional at runtime; install manually as needed
  "torch>=2.1; platform_system != 'Darwin' or python_version >= '3.10'",
  "pyyaml>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
rag = [
  "faiss-cpu>=1.7.4; platform_machine != 'arm64'",
  "sentence-transformers>=2.2",
]
server = [
  "uvicorn>=0.23",
  "fastapi>=0.110",
]
tokenizers = [
  "transformers>=4.40",
  "sentencepiece>=0.1.99",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
